# strip-comments

./: .gitignore  CLAUDE.md  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
strip_comments/: cli.py  compact.py  formatters.py  languages.py  parser.py  stripper.py
tests/: test_cli.py  test_compact.py  test_formatters.py  test_languages.py  test_languages_integration.py  test_parser.py  test_stripper.py
tests/fixtures/bash/: sample.sh
tests/fixtures/c/: sample.c
tests/fixtures/cpp/: sample.cpp
tests/fixtures/csharp/: sample.cs
tests/fixtures/css/: sample.css
tests/fixtures/dockerfile/: Dockerfile
tests/fixtures/go/: sample.go
tests/fixtures/html/: sample.html
tests/fixtures/java/: sample.java
tests/fixtures/js/: sample.js
tests/fixtures/json/: sample.json
tests/fixtures/kotlin/: sample.kt
tests/fixtures/lua/: sample.lua
tests/fixtures/php/: sample.php
tests/fixtures/py/: sample.py
tests/fixtures/ruby/: sample.rb
tests/fixtures/rust/: sample.rs
tests/fixtures/swift/: sample.swift
tests/fixtures/toml/: sample.toml
tests/fixtures/ts/: sample.ts
tests/fixtures/tsx/: sample.tsx
tests/fixtures/zig/: sample.zig
