[build-system]
requires = ["setuptools>=77.0.3", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "strip-comments"
description = "Strip comments and documentation from source files using tree-sitter"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-only"
authors = [
    { name = "Alireza Savand", email = "alireza.savand@gmail.com" },
]
maintainers = [
    { name = "Alireza Savand", email = "alireza.savand@gmail.com" },
]
keywords = [
    "comments",
    "docstrings",
    "tree-sitter",
    "source-code",
    "tokens",
    "llm",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Utilities",
]
dependencies = [
    "tree-sitter",
    "tree-sitter-python",
]
dynamic = ["version"]

[project.optional-dependencies]
javascript = ["tree-sitter-javascript"]
typescript = ["tree-sitter-typescript"]
html = ["tree-sitter-html"]
css = ["tree-sitter-css"]
go = ["tree-sitter-go"]
rust = ["tree-sitter-rust"]
c = ["tree-sitter-c"]
cpp = ["tree-sitter-cpp"]
java = ["tree-sitter-java"]
ruby = ["tree-sitter-ruby"]
php = ["tree-sitter-php"]
bash = ["tree-sitter-bash"]
json = ["tree-sitter-json"]
lua = ["tree-sitter-lua"]
swift = ["tree-sitter-swift"]
kotlin = ["tree-sitter-kotlin"]
toml = ["tree-sitter-toml"]
dockerfile = ["tree-sitter-dockerfile"]
csharp = ["tree-sitter-c-sharp"]
zig = ["tree-sitter-zig"]
all = [
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-html",
    "tree-sitter-css",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-java",
    "tree-sitter-ruby",
    "tree-sitter-php",
    "tree-sitter-bash",
    "tree-sitter-json",
    "tree-sitter-lua",
    "tree-sitter-swift",
    "tree-sitter-kotlin",
    "tree-sitter-toml",
    "tree-sitter-dockerfile",
    "tree-sitter-c-sharp",
    "tree-sitter-zig",
]
dev = [
    "ruff",
    "coverage",
    "mypy",
    "build",
    "twine",
]

[project.scripts]
strip-comments = "strip_comments.cli:main"

[tool.setuptools]
zip-safe = false
packages = ["strip_comments"]
platforms = ["OS Independent"]
include-package-data = false
# Ship code only: do not bundle the LICENSE file into the wheel/sdist.
license-files = []

[tool.setuptools_scm]
write_to = "strip_comments/_version.py"

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py314"
line-length = 120
exclude = ["tests/fixtures", "strip_comments/_version.py"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
]
ignore = ["E501", "SIM108"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
